--- a/config_sample.yaml
+++ b/config_sample.yaml
@@ -1,39 +1,42 @@
 temp_dir: /opt/autoposter/temp
 # Only VK supported now, so use 'vk'
-source: vk # 
+source: vk #
 pool_interval: 60
 log_level: info
 log_format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
 telegram:
-  channel_id: 
-  token: 
+  enabled: true
+  channel_id:
+  token:
   # https://core.telegram.org/api/obtaining_api_id
   # From https://my.telegram.org/apps
-  api_id: 
-  api_hash: 
+  api_id:
+  api_hash:
 vk:
-  token: 
-  group_id: 
+  enabled: true
+  token:
+  group_id:
 instagram:
+  enabled: false
   # https://developers.facebook.com/docs/instagram-platform/instagram-api-with-instagram-login/create-a-meta-app-with-instagram#api-setup-with-instagram-login
-  app_token: 
-  
-  proxy: 
+  app_token:
+
+  proxy:
   web_photo_location: https://ap-media.apt-1088.online
   fill_color: "#fff"
   default_tags:
     - your
     - favorite
-    - tags 
-    - for  
+    - tags
+    - for
     - every
     - post
   total_tags_count: 16
 
 # https://imagga.com/profile/dashboard
 imagga:
-  api_key: 
-  api_secret: 
+  api_key:
+  api_secret:
 
 
 replaces:
